Prettier autorun while quality check runs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap');
 
-@import "tailwindcss/preflight";
+@import 'tailwindcss/preflight';
 @tailwind utilities;
 
 @layer base {
@@ -50,7 +50,7 @@
   }
 
   * {
-    border-color: theme("colors.border");
+    border-color: theme('colors.border');
   }
 
   body {
