--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap');
 
-@import 'tailwindcss/preflight';
+@tailwind base;
+@tailwind components;
 @tailwind utilities;
 
 @layer base {
